finished header-top

--- a/index.html
+++ b/index.html
@@ -18,11 +18,46 @@
 </head>
 <body>
 
-  <header>
-    <div class="container"></div>
+  <!-- Site Header  -->
+  <header class="site-header">
+    <div class="site-header-top">
+      <div class="site-header-top-container container">
+        <!-- SITE-HEADER-LOGO  -->
+        <a class="site-header-logo" href="index.html">
+          <img class="site-header-logo-img" src="/img/logo (1).svg" alt="N24 logo"  width="264"  height="28">
+        </a>
+
+        <!-- CURRENCY-RATES -->
+        <ul class="currency-rates" >
+          <li class="currency-rates-item">
+            <b class="currency-rates-type">$</b>
+            <span class="currency-rates-value">11.450</span>
+          </li>
+
+          <li class="currency-rates-item">
+            <b class="currency-rates-type">P</b>
+            <span class="currency-rates-value">146.08</span>
+          </li>
+        </ul>
+
+        <!-- Global searchbar  -->
+
+        <!-- Language toggle  -->
+
+        <div class="lang-toggle">
+
+          <a class="lan-toggle-link lan-toggle-link-active" href="index.html">УЗ</a>
+          <a class="lan-toggle-link" href="index.html/ru">РУ</a>
+        </div>
+
+        <!-- Site header auth  -->
+
+        <a class="button button-primary" href="#">Войти</a>
+      </div>
+    </div>
   </header>
 
-  rubik 700 500 400
+
 
 </body>
 </html>
