add search form and focus styles

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 
         <!-- Global searchbar  -->
 
+        <form class="searchbar-form" action="https://echo.htmlacademy.ru" method="GET">
+          <input class="searchbar-form-input" type="search" name="search" placeholder="Поиск" aria-label="Поиск" required>
+        </form>
+
         <!-- Language toggle  -->
 
         <div class="lang-toggle">
