--- a/index.html
+++ b/index.html
@@ -59,6 +59,30 @@
         <a class="button button-primary" href="#">Войти</a>
       </div>
     </div>
+
+    <div class="container">
+      <!-- SITE-NAV  -->
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Главное</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Интересное</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Экономика</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Политика</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Общество</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Технологии</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Спорт</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Культура</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Происшествия</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#" >Наука</a></li>
+        </ul>
+      </nav>
+<!-- site-header-banner  -->
+      <aside class="site-header-banner">
+        <a class="site-header-banner-link" href="http://olcha.uz" target="_blank">
+          <img class="site-header-banner-img" src="/img/optimize 1 (1).jpg" alt="reklama" width="1200"  height="128">
+        </a>
+      </aside>
+    </div>
   </header>
 
 
