--- a/index.html
+++ b/index.html
@@ -231,6 +231,17 @@
          </article>
        </div>
     </section>
+
+
+
+    <!-- NOTICICATION-CTA  -->
+    <section class="notification-cta">
+      <div class="notification-cta-text">Хотите быть в курсе свежих новостей?
+        <br> Включите уведомления!
+      </div>
+
+     <button class="button button-orange" type="button">Включит </button>
+    </section>
    </div>
 
 
