adding some fixsing to site footer

--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
          </p>
       </div>
 
+     <div class="ul-wrapper">
       <ul class="site-footer-top-item-list">
         <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Информация о сайте</a></li>
         <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Напишите нам</a></li>
@@ -454,6 +455,7 @@
         <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Темы дня</a></li>
         <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Наша команда
         </a></li>
+     </div>
 
 
       </ul>
