add bg image to search bar and notiication bar

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
      <div class="ul-wrapper">
       <ul class="site-footer-top-item-list">
         <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Информация о сайте</a></li>
-        <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Напишите нам</a></li>
+        <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="contact.html">Напишите нам</a></li>
         <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Реклама</a></li>
         <li class="site-footer-top-item-right"><a class="site-footer-top-item-right-links" href="#">Прислать новость</a></li>
 
